[project]
name = "tensor_interval"
version = "0.1.0"
description = "A Python package for interval arithmetic and floating-point error estimation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
